[package]
name = "lightyear_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
lightyear = { git = "https://github.com/cBournhonesque/lightyear", features = ["webtransport"] }
rand = "0.8.5"
serde = "1.0.203"
